tests/NormalTests/paczka1/fuzzy1/65051811.err
Error in line 8: z04dW4mNKA80086,3
Error in line 7: z04dW4mNK A800 2,5
Error in line 24: z04dW4mNK S747 89,3
Error in line 25: Zbe S514 74,8
Error in line 34: Zbe A800 67,1
Error in line 38: Zbe S514 19,6
